Swagger documentation changed
